added list of members on members page and also a form to create new member

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="Home">Home</a></li>
-                    <li><a href="Members">Members</a></li>
-                    <li><a href="Classes">Classes</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="members">Members</a></li>
+                    <li><a href="classes">Classes</a></li>
                 </ul>
             </nav>
         </header>
