--- a/templates/members/index.html
+++ b/templates/members/index.html
@@ -6,7 +6,6 @@
 <div>
     <p>
         <h3>All Members</h3>
-        <br>
         {% for member in members %}
             <label for="first_name">First Name</label> = {{ member.first_name }},
             <label for="last_name">Last Name</label> = {{ member.last_name }},
@@ -15,6 +14,27 @@
             <br>
         {% endfor %}
     </p>
+</div>
+<div>
+    <h3>Add New Member</h3>
+    <form action="/members/new" method="post">
+        <label for="first_name">First name</label>
+        <input type="text" name="first_name" id="first_name"> <br>
+        <label for="last_name">Last name</label>
+        <input type="text" name="last_name" id="last_name"> <br>
+        <label for="age">Age</label>
+        <input type="number" name="age" id="age" min="14" max="120"> <br>
+        <label for="membership_type">Membership type</label>
+        <select name="membership_type" id="membership_type">
+            <option value="standard">Standard</option>
+            <option value="pro">Pro</option>
+        </select> <br>
+        <input type="submit" value="Add Member">
+    </form>
+</div>
+
+<div>
+    <form action="members/edit"></form>
 </div>
     
 {% endblock content %}
