trying to work out bugs in html templates

--- a/templates/members/index.html
+++ b/templates/members/index.html
@@ -7,11 +7,16 @@
     <p>
         <h3>All Members</h3>
         {% for member in members %}
+            <form action="/members/delete_member/{{member.id}}" method="POST">
+                <button class="delete_button">delete</button>
+            </form>
             <label for="first_name">First Name</label> = {{ member.first_name }},
             <label for="last_name">Last Name</label> = {{ member.last_name }},
             <label for="age">Age</label> = {{ member.age }}, 
-            <label for="membership_type">Membership Type</label> Membership type = {{ member.membership_type }}
+            <label for="membership_type">Membership Type</label> {{ member.membership_type }}
+            <a href="/members/show/{{member.id}}">Show info and classes</a>
             <br>
+            
         {% endfor %}
     </p>
 </div>
@@ -32,9 +37,4 @@
         <input type="submit" value="Add Member">
     </form>
 </div>
-
-<div>
-    <form action="members/edit"></form>
-</div>
-    
 {% endblock content %}
