--- a/templates/members/show.html
+++ b/templates/members/show.html
@@ -5,7 +5,7 @@
 
 <form action="/members/edit/{{member.id}}">
   <ul>
-    <li>Name: {{ member.first_name }} {{ member.last_name }}</li>
+    <h3> {{ member.first_name }} {{ member.last_name }}</h3>
     <li>Age: {{ member.age }}</li>
     <li>Membership Type: {{ member.membership_type }}</li>
     <li>
