--- a/templates/members/index.html
+++ b/templates/members/index.html
@@ -7,15 +7,15 @@
     <p>
         <h3>All Members</h3>
         {% for member in members %}
-            <form action="/members/delete_member/{{member.id}}" method="POST">
-                <button class="delete_button">delete</button>
+            <form action="/members/delete/{{ member.id }}" method="POST">
+                <input type="submit" value="Remove">
             </form>
             <label for="first_name">First Name</label> = {{ member.first_name }},
             <label for="last_name">Last Name</label> = {{ member.last_name }},
             <label for="age">Age</label> = {{ member.age }}, 
             <label for="membership_type">Membership Type</label> {{ member.membership_type }}
             <a href="/members/show/{{member.id}}">Show info and classes</a>
-            <br>
+            
             
         {% endfor %}
     </p>
