--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,9 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="members">Members</a></li>
-                    <li><a href="classes">Classes</a></li>
+                    <li><a href="/members">Members</a></li>
+                    <li><a href="/classes">Classes</a></li>
+                    <li><a href="/bookings">Bookings</a></li>
                 </ul>
             </nav>
         </header>
