--- a/templates/gymclasses/index.html
+++ b/templates/gymclasses/index.html
@@ -9,6 +9,9 @@
         <form action="/classes/delete/{{ gymclass.id }}" method="POST">
             <input type="submit" value="Remove">
         </form>
+        <form action="/classes/edit/{{ gymclass.id }}">
+            <input type="submit" value="Edit">
+        </form>
         <label for="start_time">Start time: {{ gymclass.start_time }}</label>
         <label for="duration">Duration: {{ gymclass.duration }}</label>
         <label for="description">Description: {{ gymclass.description }}</label>
@@ -16,7 +19,7 @@
     {% endfor %}
 </p>
 <div>
-    <h3>Add New Class</h3>
+  <h3>Add New Class</h3>
     <form action="/classes/new" method="post">
         <label for="activity_name">Activity name</label>
         <input type="text" name="activity_name" id="activity_name"> <br>
@@ -28,7 +31,7 @@
         <textarea name="description" id="description" cols="30" rows="3"></textarea>
         </select> <br>
         <input type="submit" value="Add Class">
-    </form>
+    </form>  
 </div>
 
     
