--- a/templates/gymclasses/show.html
+++ b/templates/gymclasses/show.html
@@ -5,7 +5,7 @@
     <h3>{{ gymclass.activity_name }}</h3>
     {% for member in members %}
         <li>{{ member.first_name }} {{ member.last_name }}
-        <form action="/classes/{{gymclass.id}}" method="POST">
+        <form action="/classes/remove/{{ booking }}" method="POST">
             <input type="submit" value="Remove">
         </form>
     {% endfor %}
