added delete functionality for bookings

--- a/templates/members/index.html
+++ b/templates/members/index.html
@@ -13,7 +13,7 @@
             <label for="first_name">First Name</label> = {{ member.first_name }},
             <label for="last_name">Last Name</label> = {{ member.last_name }},
             <label for="age">Age</label> = {{ member.age }}, 
-            <label for="membership_type">Membership Type</label> {{ member.membership_type }}
+            <label for="membership_type">Membership Type</label> = {{ member.membership_type }}
             <a href="/members/show/{{member.id}}">Show info and classes</a>
             
             
