--- a/templates/bookings/index.html
+++ b/templates/bookings/index.html
@@ -24,6 +24,18 @@
     
 </form>
 
-<form action=""></form>
+<div>
+    <p>
+        <h3>All Bookings</h3>
+        <ul>
+        {% for booking in bookings %}
+        <li> {{ booking.member.first_name }} {{ booking.member.last_name }} -- {{ booking.gymclass.activity_name}} -- {{ booking.gymclass.start_time }} </li>
+        <form action="/bookings/delete/{{ booking.id }}" method="POST">
+            <input type="submit" value="Remove">
+        </form>
+        {% endfor %}
+        </ul>
+    </p>
+</div>
 
 {% endblock content %}
