--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
-{% extends 'base.html' %}
-
-{% block content  %}
+{% extends 'base.html' %} {% block content %}
 <h1>Gym Management</h1>
 
+
 <p>Manage your gyms members and classes!</p>
-{% endblock  %}
+{% endblock %}
