--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,85 +1,89 @@
-.grid
-
 body {
-    background: url('/static/images/background.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #5E67E2;
-    font-family: 'Fredoka One', cursive;
-    font-family: 'Red Hat Display', sans-serif;
-    padding: 0px;
-    margin: 0px;
+  margin: 40px;
 }
 
-header {
-    background-color: #112f61
+.header {
+  grid-area: hd;
+}
+.footer {
+  grid-area: ft;
+}
+.content {
+  grid-area: main;
+}
+.sidebar {
+  grid-area: sd;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Red Hat Display', sans-serif;
-    font-weight: bold;
-    margin: 0px;
-    padding: 0px;
+.box {
+  background-color: #444;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 150%;
 }
 
-h1 {
-    font-size: 1.5em;
-    color: #0066cc;
+.header,
+.footer {
+  background-color: #999;
 }
 
-nav {
-    padding: 0px;
-    margin: 0px;
-    padding-right: 20px;
+.content {
+  background-color: #ccc;
+  color: #444;
+  
 }
 
-nav, ul, li, a, button {
-    margin-bottom: 15px;
-    text-transform: uppercase;
-    color: #edf0f1
+
+.wrapper {
+  display: grid;
+  font-family: "Fredoka One", cursive;
+  font-family: "Red Hat Display", sans-serif;
+  grid-template-columns: repeat(9, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  grid-template-areas:
+    "hd hd hd hd   hd   hd   hd   hd   hd"
+    "sd sd sd main main main main main main"
+    "ft ft ft ft   ft   ft   ft   ft   ft";
+}
+
+#logo {
+  height: auto;
+  width: auto;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+input {
+  background-color: #383f38; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 50px;
 }
 
 ul {
-    padding: 0px;
-    margin: 0px;
-    list-style-type: none;
-    text-decoration: none;
-    color: #DFDFE6
+  list-style-type: none;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-} 
-
-.logo {
-    cursor: pointer
+a {
+  background-color: #596159; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 50px;
 }
 
-.nav__links li {
-    display: inline-block;
-    padding: 0px 20px
-}
-
-.nav__links li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav__links li a:hover {
-    color: #0088a9;
-} 
-
-button {
-    padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-}
-
-button:hover {
-    background-color: rgba(0,136,169,0.8);
+.informationPanel {
+  background-color: lightskyblue;
+  display: flex;
+  flex-direction: column;
 }
